js in added in index file internally

--- a/index.html
+++ b/index.html
@@ -848,8 +848,42 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
         integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="script.js"></script>
     <script src="https://vjs.zencdn.net/8.10.0/video.min.js"></script>
+        <script>
+        $('.owl-carousel').owlCarousel({
+    loop:true,
+    margin:10,
+    nav:true,
+    dots:false,
+    touchDrag: false,
+    mouseDrag: false,
+    responsive:{
+        0:{
+            items:1
+        },
+        600:{
+            items:2
+        },
+        1000:{
+            items:3
+        }
+    }
+})
+
+
+
+let source = document.getElementsByTagName('video')
+
+let videolist = document.querySelector('.videolist')
+let videoItems = videolist.querySelectorAll('.item')
+Array.from(videoItems).forEach((item) => {
+    item.addEventListener('click', () => {
+        let vidSrc = item.getElementsByTagName('input')[0].value
+        let myVid = document.getElementsByTagName('video')[0]
+        myVid.src = vidSrc
+    })
+})
+    </script>
 </body>
 
 </html>
